# boilerplates

./: README.md
cmake-corrade/: CMakeLists.txt  init
cmake-corrade/src/: main.cpp
cmake-magnum-glfw/: CMakeLists.txt  init
cmake-sketchup-lib/: CMakeLists.txt
cmake-sketchup-lib/src/: lib.cpp  lib.hpp
corrade/: .gitmodules
corrade/src/: CMakeLists.txt
spa/: package.json
spa-elm/: README.md
spa-elm/public/: index.html  manifest.json
spa-elm/src/: Main.elm
spa/src/: Main.elm
